--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>EV3 Web Server</title>
     <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
