Translate some driver names and sensor values into a more human-readable form

--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,39 @@
     <meta charset="utf-8">
     <title>EV3 Web Server</title>
     <link rel="stylesheet" href="bootstrap.min.css" />
+    <style>
+        .circle {
+            width: 1rem;
+            height: 1rem;
+            display: inline-block;
+            vertical-align: text-top;
+            margin-right: 0.3em;
+            border-radius: 1em;
+        }
+        
+        .black-circle {
+            background-color: #000000;
+        }
+        .blue-circle {
+            background-color: #034FC0;
+        }
+        .green-circle {
+            background-color: #1ABA10;
+        }
+        .yellow-circle {
+            background-color: #E1CB20;
+        }
+        .red-circle {
+            background-color: #BE091D;
+        }
+        .white-circle-with-border {
+            background-color: #FFFFFF;
+            border: 1px solid #000000;
+        }
+        .brown-circle {
+            background-color: #581903;
+        }
+    </style>
 </head>
 <body class="ml-2 mr-2 mt-5 mb-3">
     <template id="sensor-template">
