Fix i2c sensors not visible

--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,10 @@
         .brown-circle {
             background-color: #581903;
         }
+
+        pre.values, pre.positionDisplay {
+            white-space: normal;
+        }
     </style>
 </head>
 <body class="ml-2 mr-2 mt-5 mb-3">
