--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,8 @@
     <title>EV3 Web Server</title>
     <link rel="stylesheet" href="bootstrap.min.css" />
     <style>
+        /* ================ */
+        /* Colored circles shown for color sensor values */
         .circle {
             width: 1rem;
             height: 1rem;
@@ -44,48 +46,25 @@
             background-color: #581903;
         }
 
+
+        /* ================ */
+        /* Sensor values / Motor positions */
         pre.values,
         pre.positionDisplay {
             white-space: normal;
         }
 
+
+        /* ================ */
+        /* Alert that is shown when WebSocket connection is closed */
         #alert-websocket-closed {
             width: fit-content;
             width: -moz-fit-content;
         }
 
-        .footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 60px;
-            line-height: 60px;
-            display: block;
-        }
 
-        .steering-input {
-            writing-mode: bt-lr;
-            /* IE */
-            -webkit-appearance: slider-vertical;
-            /* WebKit */
-            height: 100%;
-            width: 1.5rem;
-        }
-
-        .steering-input::-webkit-slider-runnable-track {
-            width: 0.5rem;
-            height: 100%;
-        }
-
-        .custom-range::-webkit-slider-thumb {
-            margin-right: -.25rem;
-        }
-
-        .steering-input::-moz-range-track {
-            width: 0.5rem;
-            height: 100%;
-        }
-        
+        /* ================ */
+        /* Joystick */
         #steering-container {
             display: inline-block;
             position: relative;
@@ -116,8 +95,7 @@
             height: 50px;
             background-color: red;
             border-radius: 25px;
-            margin: auto;
-            margin-top: calc(50% - 25px);
+            margin: calc(50% - 25px) auto auto;
             pointer-events: none;
         }
         #steering-vertical-line {
@@ -187,9 +165,9 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="polatiryInput" class="col-5 col-form-label">Polarity:</label>
+                        <label for="polarityInput" class="col-5 col-form-label">Polarity:</label>
                         <div class="col-7">
-                            <select name="polatiryInput" class="polarity custom-select" disabled>
+                            <select name="polarityInput" class="polarity custom-select" disabled>
                                 <option>normal</option>
                                 <option>inversed</option>
                             </select>
@@ -322,6 +300,7 @@
                     </div>
                 </div>
             </div>
+
             <h1>Sensors</h1>
             <div id="sensors-container" class="row"></div>
 
