Improve index.html

--- a/website/index.html
+++ b/website/index.html
@@ -284,7 +284,7 @@
         </div>
     </template>
     <div id="alert-websocket-closed" class="alert alert-danger fixed-top m-2 ml-auto" role="alert" hidden>
-        WebSocket connection closed. Try to <a href="javascript:window.location.reload()">reload the page</a>.
+        WebSocket connection closed. Try to <a href="javascript:window.location.reload()" class="alert-link">reload the page</a>.
     </div>
     <div class="ml-2 mr-2 mt-3 mb-3">
         <main role="main" class="container-xl">
@@ -375,10 +375,10 @@
     <footer class="mt-auto py-3 bg-dark text-white">
         <div class="text-center">
             <p>
-                <a href="https://github.com/FlorianRaediker/ev3dev-web-server" target="_blank" class="text-white-50">ev3dev-web-server</a> created by Florian Rädiker
+                <a href="https://github.com/FlorianRaediker/ev3dev-web-server" target="_blank" class="text-success">ev3dev-web-server</a> © 2020 Florian Rädiker
             </p>
             <p>
-                Licensed under the terms of the <a href="https://github.com/FlorianRaediker/ev3dev-web-server/blob/master/LICENSE" target="_blank" class="text-white-50">MIT license</a>. 
+                Licensed under the terms of the <a href="https://github.com/FlorianRaediker/ev3dev-web-server/blob/master/LICENSE" target="_blank" class="text-success">MIT license</a>
             </p>
         </div>
     </footer>
