Show values of Mindsensors Line Leader as array of rectangles

--- a/website/index.html
+++ b/website/index.html
@@ -46,6 +46,15 @@
             background-color: #581903;
         }
 
+        /* Black rectangle for ms-line-leader */
+        .black-border-rect {
+            width: 1rem;
+            height: 1rem;
+            display: inline-block;
+            vertical-align: text-top;
+            margin-right: 0.3em;
+            border: 1px solid black;
+        }
 
         /* ================ */
         /* Sensor values / Motor positions */
