--- a/website/index.html
+++ b/website/index.html
@@ -365,6 +365,12 @@
                 </div>
             </div>
             <div class="form-group row align-items-center">
+                <label for="joystick-sensitivity" class="col-form-label col-4 text-right">Sensitivity: </label>
+                <div class="col">
+                    <input id="joystick-sensitivity" type="range" min="0.1" max="1" value="1" step="0.01" class="custom-range col-sm-6">
+                </div>
+            </div>
+            <div class="form-group row align-items-center">
                 <div class="col-auto">
                     <select id="steering-port-1" class="custom-select">
                         <option value="ev3-ports:outA" selected>A</option>
